Criando a classe Posicao

--- a/xadrez-console/xadrez-console.csproj
+++ b/xadrez-console/xadrez-console.csproj
@@ -6,4 +6,10 @@
     <RootNamespace>xadrez_console</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="tabuleiro\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="tabuleiro\" />
+  </ItemGroup>
 </Project>
