--- a/xadrez-console/xadrez-console.csproj
+++ b/xadrez-console/xadrez-console.csproj
@@ -8,8 +8,10 @@
 
   <ItemGroup>
     <None Remove="tabuleiro\" />
+    <None Remove="xadrez\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="tabuleiro\" />
+    <Folder Include="xadrez\" />
   </ItemGroup>
 </Project>
